# DPaDS

./: .gitignore  FL(1).drawio  FL.drawio
code/: .gitignore  CIFAR10_PLAN.md  README.md  TODO.md  pyproject.toml
code/src/: README.md  client.py  constants.py  experiment_config.py  pytorch_test.py  server.py  test_compatibility_cifar10.py  test_compatibility_mnist.py  train_mnist.py
code/src/mechanisms/: attacks.py  dp.py  robust_aggregation.py  topk.py
code/src/models/: __init__.py  cifar10_cnn.py  mnist_cnn.py
code/src/results/: 20260622_204346_config-1_dp-False_fltrust-False_topk-False_rounds-10_clients-5_byzantine-1.json  20260622_204926_config-2_dp-True_epsilon-1.0_fltrust-False_topk-False_rounds-10_clients-5_byzantine-1.json  20260622_205926_config-2_dp-True_epsilon-10.0_fltrust-False_topk-False_rounds-10_clients-5_byzantine-1.json  20260711_215452_dataset-mnist_config-3_dp-False_fltrust-True_topk-False_rounds-600_clients-50_byzantine-10_attack-label_flip_scale-2.0.json  20260712_022020_dataset-mnist_config-3_dp-False_fltrust-True_topk-False_rounds-300_clients-50_byzantine-10_attack-label_flip_scale-2.0_Rl-1.json  20260712_030617_dataset-mnist_config-3_dp-False_fltrust-True_topk-False_rounds-300_clients-50_byzantine-10_attack-label_flip_scale-2.0.json  20260716_021745_dataset-mnist_config-1_dp-False_fltrust-False_topk-False_rounds-500_clients-50_byzantine-0_attack-label_flip_scale-2.0_Rl-10.json
code/src/scripts/: run_configurations.py  visualize_net.py  visualize_results.py
code/src/tmp/: template_excel_output.xlsx  template_excel_output_forth_table.xlsx  (+2 more)
(+713 files in other folders)
